# C-Programming

./: README.md
12-09-24/: a.out  z1  z2  z3  z4
First Semester/lab1/: hello.c  z1.c  z2.c  z3.c  z4.c
First Semester/lab10/: Makefile  t_fun.c  t_head.h  t_main.c
First Semester/lab11/: MAIN  Makefile  a.out  task1.c  task2.c  task3.c  task4.c
First Semester/lab2/: 3.c  Z2  z1.c  z2.c
First Semester/lab3/: z11.c  z12  z12.c  z13.c  z14.c  z15.c
First Semester/lab4/: z1.c  z2  z2.c
First Semester/lab5/: z1  z1.c  z2  z2.c
First Semester/lab6/: task1.c  task2.c
First Semester/lab7/: task1.c
First Semester/lab8/: a.out  task1.c  task_star.c
First Semester/lab9/: task1.c  task_star.c
Second Semester/lab1.Sort/: main.c
Second Semester/lab2/: main.c  try.c
Second Semester/lab3.Git/: mergesort.py  sort.c  task.docx  ~$task.docx
Second Semester/lab4.TextFiles/: Makefile  a.out  task.c
Second Semester/lab5.BinFiles/: a.out  task.c
Second Semester/lab6.Libraries/: CMakeLists.txt  lib.c  task.c  task.h
Second Semester/lab6.Threads/: README.md  Task  plot.gp  results.csv  results.tsv  task.c
Second Semester/lab8/: list.c  list.h  tester  (+1 more)
Star tasks/: Makefile  tin_t2.c
lab1/: z1.c
lab10/: t_fun.c  t_head.h  t_main.c
lab11/: task1.c  task2.c
lab12/task1/: CMakeLists.txt
lab12/task1/background/: CMakeLists.txt
lab2/: Z1  Z3  z2.c
lab3/: z11  z12  z12.c  z13  z14  z14.c  z15  z15.c
lab4/: z1  z1.c
lab5/: z1.c  z2.c
lab6/: task1.c  task2.c
lab7/: task1.c
lab8/: task1.c  task2.c  task_star.c
lab9/: task1.c  task_star.c
(+10 files in other folders)
